<resources>
    <string name="app_name">Just java</string>
    <string name="quantity">QUANTITY</string>
    <string name="innumber">0</string>
    <string name="order">ORDER</string>
    <string name="price">Order Summary</string>
    <string name="pricenumber"> 0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="_1">1</string>
    <string name="thank_you">Thank you!</string>
    <string name="total" translatable="false">\nTotal: ₹</string>
    <string name="quantiry">\Quantity: \</string>
    <string name="addchoco">\nAdd chocolate? </string>
    <string name="addwhippedcream">\nAdd whipped cream? </string>
    <string name="name">Name: </string>

</resources>