<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:layout_marginBottom="16dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Whipped Cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginRight="14dp">
    </CheckBox>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:layout_marginBottom="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:textStyle="bold"
            android:onClick="decrement">
        </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quantity_text_view"
        android:text="@string/innumber"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        />
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:textStyle="bold"
                android:onClick="increment">
            </Button>

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAllCaps="true"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_summary_text_view"
        android:text="@string/pricenumber"
        android:textSize="16sp"
        android:textColor="#000000"

        />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/order"
    android:textStyle="bold"
    android:layout_marginTop="16dp"
    android:onClick="submitOrder">
</Button>
</LinearLayout>